# project_2_sem_military

./: CMakeLists.txt  Creature.cpp  Creature.h  GameTile.cpp  GameTile.h  Gameworld.cpp  Gameworld.h  README.md  aircraft_carrier.cpp  aircraft_carrier.h  attack_aircraft.cpp  attack_aircraft.h  boat.cpp  boat.h  bomber_aircraft.cpp  bomber_aircraft.h  destroyer.cpp  destroyer.h  fighter_aircraft.cpp  fighter_aircraft.h  heavy_tank.cpp  heavy_tank.h  light_tank.cpp  light_tank.h  main.cpp  map.cpp  medium_tank.cpp  medium_tank.h  military.cpp  military.h  planes.cpp  planes.h  question.txt  ships.cpp  ships.h  tanks.cpp  tanks.h
